--- a/angular.json
+++ b/angular.json
@@ -105,6 +105,16 @@
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {
+            "prerender": false,
+            "ssr": false,
+            "browserTarget": "simple-crm:build:production",
+            "firebaseProject": "simple-crm-776bb",
+            "firebaseHostingSite": "simple-crm-776bb"
+          }
         }
       }
     }
